--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.2.0",
+    "@angular/animations": "^15.2.9",
+    "@angular/cdk": "^16.1.1",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
@@ -19,7 +20,13 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@ng-bootstrap/ng-bootstrap": "^15.0.1",
+    "@schematics/angular": "^16.1.0",
+    "@swimlane/ngx-charts": "^20.4.1",
     "bootstrap": "^5.3.0",
+    "chart.js": "^3.6.0",
+    "d3": "^7.8.5",
+    "d3-shape": "^3.2.0",
+    "ng2-charts": "^4.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -28,6 +35,7 @@
     "@angular-devkit/build-angular": "^15.2.6",
     "@angular/cli": "~15.2.6",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/d3-shape": "^3.1.1",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
